css/main.css
/* ... */
/* concept */
.concept {
    display: block;
    width: 100%;
    height: 50vh;
    text-align: center;
}
.concept h1 {
    color: #79431C;
    font-weight: 500;
}
.concept_contents {
    display: block;
    width: calc(100% - 80px);
    text-align: left;
    margin: 40px auto;
    font-size: 1.5rem;
}
.concept p {
    font-size: 0.5em;
    margin-bottom: 1.0em;
    font-weight: 400;
}
.concept p:last-of-type {
    margin-bottom: 0;
}

/* service */
.service .section_title span {
    background-color: #006934;
}
.service .inner {
    width: calc(100% - 40px);
}
.service_contents {
    display: flex;
    width: calc(100% - 40px);
    margin: 40px auto;
}
.service_content {
    width: 33.33%;
    padding-top: calc(33.33% - 13px);
    text-align: center;
    position: relative;
    border-radius: 50%;
    background-size: cover;
}
.service_content div {
    display: block;
    width: 100%;
    height: 80px;
    position: absolute;
    bottom: 104px;
    left: 0;
}
.service_content div h2 {
    color: #fff;
    margin-bottom: 2.375em;
    font-weight: 700;
}
.more_btn {
    display: block;
    width: 60px;
    margin: 0 auto;
    font-size: 12px;
    line-height: 12px;
    white-space: nowrap;
    padding: 12px 48px;
    background-color: #533119;
    color: #fff;
    text-decoration: none;
    border-radius: 36px;
    font-weight: 400;
}
.service_content:nth-child(1) {
    background-image: url("../img/service_1.png");
    background-position: left;
    margin-right: 20px;
}
.service_content:nth-child(2) {
    background-image: url("../img/service_2.png");
    background-position: -100px 0;
}
.service_content:nth-child(3) {
    background-image: url("../img/service_3.png");
    margin-left: 20px;
    background-position: -100px 0;
}


/* access */
.access .section_title span {
    background-color: #EA651A;
}
.access .map {
    display: block;
    width: calc(100% - 40px);
    height: 300px;
    margin: 40px auto 0;
}

/* information */
.info_contents {
    display: block;
    width: calc(100% - 80px);
    margin: 40px auto;
}
.info_contents img {
    float: left;
    width: 50%;
    height: auto;
    max-width: 450px;
    object-fit: cover;
    mask-position: center;
    -webkit-mask-position: center;
    mask-size: contain;
    -webkit-mask-size: contain;
    mask-repeat: no-repeat;
    -webkit-mask-repeat: no-repeat;
}
#shop_image {
    mask-image: url(../img/svg/shop.svg);
    -webkit-mask-image: url(../img/svg/shop.svg);
    mask-mode: alpha;
    -webkit-mask-mode: alpha;
}
.info_detail {
    float: right;
    width: 50%;
    font-size: 1.5rem;
    background-color: #fff;
    padding: 60px 0;
    border-radius: 2.0rem;
    margin-top: 150px;
    margin-right: -10px;
}
/* information */
.information .section_title span {
    background-color: #B0E362;
}

/* footer background image */
.footer_bg {
    display: block;
    width: 100%;
    height: 555px;
    background-image: url(../img/vegetable_tile_3.png);
    mask-position: center;
    -webkit-mask-position: center;
    mask-size: cover;
    -webkit-mask-size: cover;
    mask-repeat: no-repeat;
    -webkit-mask-repeat: no-repeat;
}
#footer_bg {
    mask-image: url(../img/svg/kobayasu_footer.svg);
    -webkit-mask-image: url(../img/svg/kobayasu_footer.svg);
    mask-mode: alpha;
    -webkit-mask-mode: alpha;
}
/* footer */
#footer {
    display: block;
    width: 100%;
    margin-top: -555px;
}
#footer .inner {
    width: calc(100% - 40px);
    position: relative;
    padding: 230px 0 130px;
}
#footer small {
    color: #fff;
    margin: 0;
}
#footer .logo_pc {
    display: block;
    width: 130px;
    height: 36px;
    background-image: url("../img/svg/kobayasu_noen_logo_text.svg");
    margin-top: 0;
    margin-bottom: 0.5rem;
}
#footer .global_nav {
    right: 0;
    top: 230px;
}
#footer .global_nav ul li {
    vertical-align: top;
}
#footer dl {
    width: 50%;
    font-size: 1.5rem;
    color: #fff;
}
#footer dt:first-of-type, #footer dd:first-of-type {
    display: none;
}
#footer dt:nth-of-type(2){
    display: none;
}
#footer dd:nth-of-type(2) {
    padding-left: 0;
}
#footer dt {
    width: 3.0em;
    text-align: left;
}
#footer dd {
    padding-left: 3.0em;
}
@media screen and (max-width: 1024px) {
    #footer .logo_pc {
        display: none;
    }
}
#footer .logo_sp {
    display: none;
}
@media screen and (max-width: 1024px) {
    #footer .logo_sp {
        display: block;
    }
}
#footer .global_nav {
    display: block;
}
@media screen and (max-width: 1024px) {
    #footer .global_nav {
        display: none;
    }
}

